<resources>
  <string name="app_name">Plate Picks</string>
  <string name="about_food">Activity for information about food</string>
  <string name="liked_list">Liked List</string>
  <string name="yes_button">Yes</string>
  <string name="no_button">No</string>
  <string name="contentDescription_tinder">Image of suggested food</string>
  <string name="contentDescription_logo">Plate Picks Logo</string>
  <string name="contentDescription_circleCheckers">Checkered circle</string>
  <string name="contentDescription_redBG">Red background for top bar</string>
  <string name="contentDescription_list">Button for list of liked foods</string>
  <string name="contentDescription_checkerTop">Checkered line for border</string>
  <string name="contentDescription_checkerBottom">Checkered line for border</string>
  <string name="contentDescription_redCircle">Red circle background</string>
  <string name="contentDescription_fancyFood">Last-liked food image</string>
  <string name="contentDescription_fancyButton">Click here to see the last-liked food</string>
  <string name="contentDescription_fadedLogo">App background logo</string>
  <string name="action_like_list">Like list</string>
  <string name="action_last_liked">Last liked image of food</string>
  <string name="drawer_open">open the drawer</string>
  <string name="drawer_close">close the drawer</string>
  <string name="facebook_app_id">477586705772225</string>
  <string name="placeholder_1">One sec.</string>
  <string name="placeholder_2">In the meantime, why don\'t you check out your other dishes?</string>
  <string name="placeholder_offline">We had trouble connecting to the internet.</string>
  <string name="placeholder_no_images">There are no more results for this area. Why not try changing
    your search radius or categories?</string>
  <string name="google_app_id">plate-picks</string>
  <string name="content_file_provider_authority">com.mysampleapp.fileprovider</string>
  <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.amazon.mysampleapp</string>
  <string name="main_nav_menu_item_home">Home</string>
  <string name="title_activity_item_detail">Item Detail</string>
  <string name="title_activity_item_list">Item List</string>
  <string name="title_activity_main">@string/app_name</string>
  <string name="title_activity_sign_in">Sign-in</string>
  <string name="button_text_sign_in">SIGN IN</string>
  <string name="button_text_sign_out">SIGN OUT</string>
  <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
  <string name="content_helper_error_title">No Content Viewer</string>
  <string name="content_helper_error_no_app">No Viewing App exists for content type \'%s\'.</string>
  <string name="liked_list_label">Activity for the liked list</string>
  <string name="fragment_demo_instruction_overview_header">Overview</string>
  <string name="fragment_demo_instruction_description_header">Sample App Features</string>
  <string name="feature_sign_in_title">User Sign-in</string>
  <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
  <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
  <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
  <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
  <string name="feature_sign_in_demo_button">Demo User Identity</string>
  <string name="feature_app_analytics_title">App Analytics</string>
  <string name="feature_app_analytics_subtitle">Collect app usage information and analyze key metrics.</string>
  <string name="feature_app_analytics_overview">Amazon Mobile Analytics allows you to collect, visualize, and export app event data. You can track app usage and monetization in the Amazon Mobile Analytics console, or run custom analysis by automatically exporting app events to Amazon S3 and Amazon Redshift.</string>
  <string name="feature_app_analytics_description">The Sample App records user session activity in metrics that may be viewed in the Amazon Mobile Analytics console. It also provides buttons to demonstrate generating a custom or monetization event, which records user activity, such as the sale of an in-app purchase item.</string>
  <string name="feature_app_analytics_powered_by">Powered by Amazon Mobile Analytics</string>
  <string name="feature_app_analytics_demo_button">Demo App Analytics</string>
  <string name="feature_app_content_delivery_title">App Content Delivery</string>
  <string name="feature_app_content_delivery_subtitle">Store and distribute media assets and other files.</string>
  <string name="feature_app_content_delivery_overview">Store app assets like resource files in the cloud. Download and cache files in your app.</string>
  <string name="feature_app_content_delivery_description">The Sample App demonstrates file download and caching by providing a remote file explorer. You can download files from Amazon S3 (and optionally Amazon CloudFront) and pin them to the cache on device by clicking on each file entry. From the menu, you can download all recent files, set the cache size limit, or clear the cache.</string>
  <string name="feature_app_content_delivery_powered_by">Powered by Amazon S3 and Amazon CloudFront</string>
  <string name="feature_app_content_delivery_demo_button">Demo Content Delivery</string>
  <string name="feature_cloud_logic_title">Cloud Logic</string>
  <string name="feature_cloud_logic_subtitle">Run backend code in the cloud.</string>
  <string name="feature_cloud_logic_overview">Run backend code in the cloud.</string>
  <string name="feature_cloud_logic_description">The Sample App demonstrates the ability of a mobile app to invoke an AWS Lambda function. Enter the name of the function you wish to run and provide a list of request inputs. Invoke the function and see results.</string>
  <string name="feature_cloud_logic_powered_by">Powered by AWS Lambda</string>
  <string name="feature_cloud_logic_demo_button">Demo Cloud Logic</string>
  <string name="main_nav_menu_item_identity_demo">User Identity</string>
  <string name="main_fragment_title_user_identity">User Identity</string>
  <string name="main_fragment_subtitle_user_identity">Keep track of users</string>
  <string name="identity_demo_text_view_description">Displays the user identity.</string>
  <string name="unknown_user">Guest User</string>
  <string name="user_id">USER IDENTIFIER</string>
  <string name="identity_demo_textview_username_description">User\'s name</string>
  <string name="identity_demo_textview_userid_description">User\'s unique identifier</string>
  <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
  <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
  <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
  <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>
  <string name="main_nav_menu_item_app_analytics_demo">App Analytics</string>
  <string name="main_fragment_title_app_analytics">App Analytics</string>
  <string name="main_fragment_subtitle_app_analytics">Understand customer usage</string>
  <string name="app_analytics_long_description">Note that events are batch processed and may take up to 60 minutes to display in the console.</string>
  <string name="generate_custom_event">Generate Custom Event</string>
  <string name="generate_monetization_event">Generate Monetization Event</string>
  <string name="main_nav_menu_item_content_delivery_demo">Content Delivery</string>
  <string name="main_fragment_title_content_delivery">Content Delivery</string>
  <string name="main_fragment_subtitle_content_delivery">Store app assets like resource files in the cloud. Download and cache files in your app.</string>
  <string name="content_dialog_ok">OK</string>
  <string name="content_cache_summary_text">Cache Summary</string>
  <string name="content_cache_limit_text">Limit</string>
  <string name="content_cache_use_text">In Use</string>
  <string name="content_cache_available_text">Available</string>
  <string name="content_cache_pinned_text">Pinned</string>
  <string name="content_refresh_text">Refresh</string>
  <string name="content_download_recent_text">Download Recent</string>
  <string name="content_set_cache_size_text">Set Cache Size</string>
  <string name="content_clear_cache_text">Clear Cache</string>
  <string name="content_path_prefix_text">Path:\u0020</string>
  <string name="content_folder_text">This is a folder.</string>
  <string name="content_context_menu_open">Open</string>
  <string name="content_context_menu_open_remote">Open Remote URL</string>
  <string name="content_context_menu_download">Download</string>
  <string name="content_context_menu_download_latest">Download Latest Version</string>
  <string name="content_context_menu_pin">Pin</string>
  <string name="content_context_menu_download_pin">Download &amp; Pin</string>
  <string name="content_context_menu_unpin">Unpin</string>
  <string name="content_context_menu_delete_local">Delete Local Copy</string>
  <string name="content_progress_dialog_title_wait">Please wait &#8230;</string>
  <string name="content_progress_dialog_message_load_local_content">Loading local content</string>
  <string name="content_progress_dialog_message_load_content">Loading S3 objects list</string>
  <string name="content_list_failure_text">Failure Listing Content</string>
  <string name="content_transfer_failure_text">Transfer Failure</string>
  <string name="content_removal_error_text">Content Removal Error</string>
  <string name="content_permission_failure_title_text">Permission Failure</string>
  <string name="content_permission_failure_text">Denial of Read External Storage Permission has disabled the ability to upload user files.</string>
  <string name="main_nav_menu_item_cloud_logic_demo">Cloud Logic</string>
  <string name="main_fragment_title_cloud_logic">Cloud Logic</string>
  <string name="main_fragment_subtitle_cloud_logic">Deploy app logic to the cloud.</string>
  <string name="cloud_logic_function">FUNCTION</string>
  <string name="cloud_logic_request">REQUEST</string>
  <string name="cloud_logic_result">RESULT</string>
  <string name="cloud_logic_reset">RESET</string>
  <string name="cloud_logic_invoke">INVOKE</string>
  <string name="cloud_logic_error_title">Error</string>
  <string name="cloud_logic_error_dismiss">Dismiss</string>
  <string name="no">No</string>
  <string name="nosql_operation_header_get">Get</string>
  <string name="nosql_operation_header_primary_queries">Primary Index Queries</string>
  <string name="nosql_operation_header_secondary_queries">Secondary Index Queries (%s)</string>
  <string name="nosql_operation_header_scan">Scan</string>
  <string name="nosql_operation_get_by_partition_text">Get Item</string>
  <string name="nosql_operation_example_get_by_partition_text">Find Item with %1$s = \'%2$s\'.</string>
  <string name="nosql_operation_get_by_partition_and_sort_text">Get Item</string>
  <string name="nosql_operation_example_get_by_partition_and_sort_text">Find Item with %1$s = \'%2$s\' and %3$s = \'%4$s\'.</string>
  <string name="nosql_operation_title_query_by_partition_and_sort_condition_text">Query by Partition Key and Sort Condition</string>
</resources>