<?xml version="1.0" encoding="utf-8"?>
<!--Container for whole layout-->

<!--Notice that some child containers have height=0dp. For LinearLayout, specifying a-->
<!--layout weight and setting height/width to 0dp sets height/width to a fraction of -->
<!--of the screen. Like setting weights for two containers, 5 and 5, would split     -->
<!--height or width in half.                                                         -->

<!--The proportion can be set however one wants (3 and 9, 2 & 8 & 14, etc.). However,-->
<!--objects that have a set height/width (eg. the toolbar) will still be its stated  -->
<!--height. So in this layout, FrameLayout and RelativeLayout are splitting the      -->
<!--remainder of the screen.                                                         -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Main UI-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_ui"
        android:background="@color/main_grey">

        <!--Top Bar-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top_bar_section">

            <ImageView
                android:id="@+id/red_bar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/main_red"
                android:layout_gravity="top"
                android:contentDescription="@string/contentDescription_redBG"/>

            <!--Drawer Icon-->
            <ImageButton
                android:id="@+id/droor_icon"
                android:contentDescription="@string/contentDescription_tinder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="17dp"
                android:scaleType="centerInside"
                android:src="@drawable/settings_icon_3"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/red_bar"
                android:layout_alignBottom="@id/red_bar"
                android:onClick="openDrawer"/>

            <!--List Button-->
            <FrameLayout
                android:id="@+id/list_button_frame"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="16dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/red_bar"
                android:layout_alignBottom="@id/red_bar">

                <ImageButton
                    android:id="@+id/list_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/list_icon_3"
                    android:background="@android:color/transparent"
                    android:onClick="gotoList"
                    android:contentDescription="@string/contentDescription_list"/>

                <TextView
                    android:id="@+id/list_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_red"
                    android:typeface="sans"
                    android:layout_gravity="center"/>
            </FrameLayout>

            <ImageView
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:id="@+id/red_circle"
                android:background="@drawable/red_circle"
                android:layout_gravity="center_horizontal|top"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/contentDescription_redCircle"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/fancy_button_frame"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp">

            </FrameLayout>

            <ImageView
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:id="@+id/top_logo"
                android:src="@drawable/main_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

        </RelativeLayout>

        <!--Center Section-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/pictures_section"
            android:layout_gravity="center"
            android:layout_weight="4">

            <!--Top Checker Border-->

            <!--Faded Logo-->


            <!--Container for Tinder Images-->
            <com.platepicks.support.CustomViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:id="@+id/viewPager_images"
                android:layout_below="@+id/top_checkers"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible" />


            <!--Bottom Checker Border-->
        </RelativeLayout>

        <!--Bottom Bar-->
        <RelativeLayout
            android:id="@+id/buttons_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">

            <!--A "nothing" view. Useful for layout tricks-->
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/space_middle"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_frame"
                android:layout_toLeftOf="@+id/space_middle"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_no"
                    android:layout_alignParentBottom="false"
                    android:alpha="0.05"
                    android:layout_toLeftOf="@+id/space_middle"
                    android:scaleType="center"
                    android:src="@drawable/white_circle"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/imageView5"
                    android:layout_gravity="center"
                    android:src="@android:drawable/ic_delete" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes_frame"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/space_middle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_yes"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.05"
                    android:layout_toRightOf="@+id/space_middle"
                    android:adjustViewBounds="false"
                    android:src="@drawable/white_circle"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/imageView4"
                    android:src="@mipmap/icon_check"
                    android:layout_gravity="center" />
            </FrameLayout>


            <!--No Button-->

            <!--Yes Button-->
        </RelativeLayout>
    </LinearLayout>

    <!--Settings Drawer-->
    <include layout="@layout/settings_drawer"/>

    <!--Splash Screen-->
    <include layout="@layout/splash_screen"/>

</FrameLayout>

